# src/main/java/com/booleanuk/api/config/SecurityConfiguration.java
@@ -4,6 +4,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.annotation.web.configurers.LogoutConfigurer;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -16,8 +17,9 @@ import org.springframework.security.web.SecurityFilterChain;
 public class SecurityConfiguration {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http.authorizeHttpRequests((requests) ->
-                        requests.requestMatchers("/games", "/games/*").authenticated()
+        http.csrf(AbstractHttpConfigurer::disable)
+            .authorizeHttpRequests((requests) ->
+                        requests.requestMatchers("/games/**", "/customers/**", "/borrow/**", "/return/**").authenticated()
                 )
             .formLogin((form) -> form.loginPage("/login").permitAll())
             .logout(LogoutConfigurer::permitAll);
@@ -27,6 +29,7 @@ public class SecurityConfiguration {
 
     @Bean
     public UserDetailsService userDetailsService() {
+        // Admin user account
         UserDetails user = User.withDefaultPasswordEncoder()
                 .username("user")
                 .password("password")
