# src/main/java/com/booleanuk/api/repositories/CustomerRepository.java
@@ -1,0 +1,7 @@
+package com.booleanuk.api.repositories;
+
+import com.booleanuk.api.models.Customer;
+import org.springframework.data.jpa.repository.JpaRepository;
+
+public interface CustomerRepository extends JpaRepository<Customer, Integer> {
+}
